@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2001 The Apache Software Foundation.  All rights
+ * Copyright (c) 2001-2002 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -130,6 +130,12 @@ public class FixCrLfTest extends BuildFileTest {
         executeTarget("test9");
         assertEqualContent(new File("src/etc/testcases/taskdefs/fixcrlf/expected/Junk9.java"),
                            new File("src/etc/testcases/taskdefs/fixcrlf/result/Junk9.java"));
+    }
+    
+    public void testMacLines() throws IOException { 
+        executeTarget("testMacLines");
+        assertEqualContent(new File("src/etc/testcases/taskdefs/fixcrlf/expected/Mac2Unix"),
+                           new File("src/etc/testcases/taskdefs/fixcrlf/result/Mac2Unix"));
     }
     
     public void testNoOverwrite() throws IOException {
